src/grammer.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { program: peg$parseprogram },
      peg$startRuleFunction  = peg$parseprogram,

      peg$c0 = function(body) { return {type:AST.Program, body: body} },
      peg$c1 = "|",
      peg$c2 = peg$literalExpectation("|", false),
      peg$c3 = function(left, filterCall) {
              var res = left;
              if(filterCall.length) {
                  for(var i=0; i<filterCall.length; i++) {
                      var filter = filterCall[i][2];
                      filter.arguments.unshift(res);
                      res = filter;
                  }
              }
              return res
          },
      peg$c4 = ":",
      peg$c5 = peg$literalExpectation(":", false),
      peg$c6 = function(callee, args) {
              args = args.map((arg) => arg[2])
              return {
                  type: AST.CallExpression,
                  callee,
                  arguments: args,
                  filter: true
              }
          },
      peg$c7 = "=",
      peg$c8 = peg$literalExpectation("=", false),
      peg$c9 = function(left, right) {
              return right ? {
                  type: AST.AssignmentExpression,
                  left: left,
                  right: right[2]
              } : left
          },
      peg$c10 = ",",
      peg$c11 = peg$literalExpectation(",", false),
      peg$c12 = function(first, elements) {
              elements.unshift(first)
              return elements
          },
      peg$c13 = function(assignment) {
              return [assignment]
          },
      peg$c14 = "?",
      peg$c15 = peg$literalExpectation("?", false),
      peg$c16 = function(test, consequent) {
              return consequent ? {
                  type: AST.ConditionalExpression,
                  test: test,
                  consequent: consequent[2],
                  alternate: consequent[6]
              } : test
          },
      peg$c17 = "||",
      peg$c18 = peg$literalExpectation("||", false),
      peg$c19 = function(left, right) {
              if(right.length) {
                  for(var i=0; i<right.length; i++) {
                      left = {
                          type: AST.LocalsExpression,
                          left: left,
                          operator: '||',
                          right: right[i][2]
                      }
                  }
              }
              return left
          },
      peg$c20 = "&&",
      peg$c21 = peg$literalExpectation("&&", false),
      peg$c22 = function(left, right) {
              if(right.length) {
                  for(var i=0; i<right.length; i++) {
                      left = {
                          type: AST.LocalsExpression,
                          left: left,
                          operator: '&&',
                          right: right[i][2]
                      }
                  }
              }
              return left        
          },
      peg$c23 = "===",
      peg$c24 = peg$literalExpectation("===", false),
      peg$c25 = "!==",
      peg$c26 = peg$literalExpectation("!==", false),
      peg$c27 = "==",
      peg$c28 = peg$literalExpectation("==", false),
      peg$c29 = "!=",
      peg$c30 = peg$literalExpectation("!=", false),
      peg$c31 = function(left, right) {
              if(right.length) {
                  for(var i=0; i<right.length; i++) {
                      left = {
                          type: AST.BinaryExpression,
                          left: left,
                          operator: right[i][0],
                          right: right[i][2]
                      }
                  }
              }
              return left        
          },
      peg$c32 = "<=",
      peg$c33 = peg$literalExpectation("<=", false),
      peg$c34 = ">=",
      peg$c35 = peg$literalExpectation(">=", false),
      peg$c36 = ">",
      peg$c37 = peg$literalExpectation(">", false),
      peg$c38 = "<",
      peg$c39 = peg$literalExpectation("<", false),
      peg$c40 = /^[+\-]/,
      peg$c41 = peg$classExpectation(["+", "-"], false, false),
      peg$c42 = /^[*\/%]/,
      peg$c43 = peg$classExpectation(["*", "/", "%"], false, false),
      peg$c44 = /^[+!\-]/,
      peg$c45 = peg$classExpectation(["+", "!", "-"], false, false),
      peg$c46 = function(operator, argument) {
              return {
                  type: AST.UnaryExpression,
                  operator: operator,
                  argument: argument
              }
          },
      peg$c47 = function(primaryLeft, primaryNext) {
              var primary = primaryLeft;
              if(primaryNext.length) {
                  for(var i=0; i<primaryNext.length; i++) {
                      if(primaryNext[i].callee) {
                          primaryLeft = primary
                          primary = primaryNext[i]
                          primary.callee = primaryLeft
                      } else if(primaryNext[i].object) {
                          primaryLeft = primary
                          primary = primaryNext[i]
                          primary.object = primaryLeft
                      }
                  }
              }
              return primary
          },
      peg$c48 = "(",
      peg$c49 = peg$literalExpectation("(", false),
      peg$c50 = ")",
      peg$c51 = peg$literalExpectation(")", false),
      peg$c52 = function(filter) {
              return filter
          },
      peg$c53 = "[",
      peg$c54 = peg$literalExpectation("[", false),
      peg$c55 = "]",
      peg$c56 = peg$literalExpectation("]", false),
      peg$c57 = function(arrayDeclaration) {
              return arrayDeclaration
          },
      peg$c58 = "{",
      peg$c59 = peg$literalExpectation("{", false),
      peg$c60 = "}",
      peg$c61 = peg$literalExpectation("}", false),
      peg$c62 = function(properties) {
              return {
                  type: AST.ObjectExpression,
                  properties: properties
              }
          },
      peg$c63 = function(primary) {
              return {
                  type: AST.MemberExpression,
                  object: {},
                  property: primary,
                  computed: true
              }
          },
      peg$c64 = ".",
      peg$c65 = peg$literalExpectation(".", false),
      peg$c66 = function(identifier) {
              return {
                  type: AST.MemberExpression,
                  object: {},
                  property: identifier,
                  computed: false
              }
          },
      peg$c67 = function(parseArguments) {
              return {
                  type: AST.CallExpression,
                  callee: {},
                  arguments: parseArguments
              }
          },
      peg$c68 = function(elements) {
              return {
                  type: AST.ArrayExpression,
                  elements: elements || []
              }
          },
      peg$c69 = function(property, properties) {
              properties.unshift(property)
              return properties
          },
      peg$c70 = function(property) {
              return [{
                  type: AST.Property,
                  value: property.value,
                  key: property.key
              }]
          },
      peg$c71 = function() {
              return []
          },
      peg$c72 = function(key, value) {
              return {
                  key: key,
                  value: value
              }
          },
      peg$c73 = function(arg, args) {
              args.unshift(arg)
              return args
          },
      peg$c74 = function(arg) {
              return [arg]
          },
      peg$c75 = /^[a-zA-Z$_]/,
      peg$c76 = peg$classExpectation([["a", "z"], ["A", "Z"], "$", "_"], false, false),
      peg$c77 = /^[a-zA-Z_0-9]/,
      peg$c78 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", ["0", "9"]], false, false),
      peg$c79 = function(name) { return { type: AST.Identifier, name: name} },
      peg$c80 = "null",
      peg$c81 = peg$literalExpectation("null", false),
      peg$c82 = function() {
              return { 
                  type: AST.Literal,
                  value: 'null'
              }
          },
      peg$c83 = "true",
      peg$c84 = peg$literalExpectation("true", false),
      peg$c85 = function() {
              return {
                  type: AST.Literal,
                  value: true
              }
          },
      peg$c86 = "false",
      peg$c87 = peg$literalExpectation("false", false),
      peg$c88 = function() {
              return {
                  type: AST.Literal,
                  value: false
              }
          },
      peg$c89 = "this",
      peg$c90 = peg$literalExpectation("this", false),
      peg$c91 = function() {
              return { 
                  type: AST.ThisExpression
              }
          },
      peg$c92 = "$locals",
      peg$c93 = peg$literalExpectation("$locals", false),
      peg$c94 = function() {
              return {
                  type: AST.LocalsExpression
              }
          },
      peg$c95 = function(value) {
              return {
                  type: AST.Literal,
                  value: value
              }
          },
      peg$c96 = "'",
      peg$c97 = peg$literalExpectation("'", false),
      peg$c98 = "\\'",
      peg$c99 = peg$literalExpectation("\\'", false),
      peg$c100 = /^[^']/,
      peg$c101 = peg$classExpectation(["'"], true, false),
      peg$c102 = function() {
              return text()
          },
      peg$c103 = "\"",
      peg$c104 = peg$literalExpectation("\"", false),
      peg$c105 = "\\\"",
      peg$c106 = peg$literalExpectation("\\\"", false),
      peg$c107 = /^[^"]/,
      peg$c108 = peg$classExpectation(["\""], true, false),
      peg$c109 = function() { return parseFloat(text()); },
      peg$c110 = /^[1-9]/,
      peg$c111 = peg$classExpectation([["1", "9"]], false, false),
      peg$c112 = /^[eE]/,
      peg$c113 = peg$classExpectation(["e", "E"], false, false),
      peg$c114 = "-",
      peg$c115 = peg$literalExpectation("-", false),
      peg$c116 = "+",
      peg$c117 = peg$literalExpectation("+", false),
      peg$c118 = "0",
      peg$c119 = peg$literalExpectation("0", false),
      peg$c120 = /^[0-9]/,
      peg$c121 = peg$classExpectation([["0", "9"]], false, false),
      peg$c122 = peg$otherExpectation("whitespace"),
      peg$c123 = /^[ \t\n\r]/,
      peg$c124 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseprogram() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsefilter();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsefilter() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parseassignment();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 124) {
          s5 = peg$c1;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c2); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (s6 !== peg$FAILED) {
            s7 = peg$parsefilterCall();
            if (s7 !== peg$FAILED) {
              s8 = peg$parse_();
              if (s8 !== peg$FAILED) {
                s5 = [s5, s6, s7, s8];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 124) {
            s5 = peg$c1;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c2); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            if (s6 !== peg$FAILED) {
              s7 = peg$parsefilterCall();
              if (s7 !== peg$FAILED) {
                s8 = peg$parse_();
                if (s8 !== peg$FAILED) {
                  s5 = [s5, s6, s7, s8];
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c3(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsefilterCall() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    s0 = peg$currPos;
    s1 = peg$parseidentifier();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 58) {
          s5 = peg$c4;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parse_();
          if (s6 !== peg$FAILED) {
            s7 = peg$parseassignment();
            if (s7 !== peg$FAILED) {
              s8 = peg$parse_();
              if (s8 !== peg$FAILED) {
                s5 = [s5, s6, s7, s8];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$currPos;
          if (input.charCodeAt(peg$currPos) === 58) {
            s5 = peg$c4;
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          if (s5 !== peg$FAILED) {
            s6 = peg$parse_();
            if (s6 !== peg$FAILED) {
              s7 = peg$parseassignment();
              if (s7 !== peg$FAILED) {
                s8 = peg$parse_();
                if (s8 !== peg$FAILED) {
                  s5 = [s5, s6, s7, s8];
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c6(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseassignment() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseternary();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 61) {
          s4 = peg$c7;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c8); }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseternary();
            if (s6 !== peg$FAILED) {
              s7 = peg$parse_();
              if (s7 !== peg$FAILED) {
                s4 = [s4, s5, s6, s7];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c9(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseassignments() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseassignment();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 44) {
          s3 = peg$c10;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c11); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseassignments();
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c12(s1, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseassignment();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 44) {
            s3 = peg$c10;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c11); }
          }
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c13(s1);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseternary() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;
